fix: menu enabled not updated
